wg-easy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wg-easy
  namespace: wg-easy
spec:
  selector:
    matchLabels:
      app: wg-easy
  template:
    metadata:
      labels:
        app: wg-easy
    spec:
      containers:
      - name: wg-easy
        image: ghcr.io/wg-easy/wg-easy
        imagePullPolicy: Always
        ports:
        - containerPort: 51822
          protocol: UDP
        - containerPort: 51821
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - SYS_MODULE
        volumeMounts:
        - name: config
          mountPath: /etc/wireguard
      restartPolicy: Always
      volumes:
      - name: config
        persistentVolumeClaim: 
          claimName: wg-easy-config
