wg-easy/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-dns
  namespace: wg-easy
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.2.249
spec:
  type: LoadBalancer
  selector:
    app: wg-easy
  ports:
  - port: 51822
    targetPort: 51820
    protocol: UDP
